--- a/smart-sso-demo2/src/main/resources/application.properties
+++ b/smart-sso-demo2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-
+server.servlet.context-path=/demo2
 logging.level.root=debug
 
 spring.freemarker.charset=UTF-8
@@ -10,7 +10,7 @@ spring.freemarker.request-context-attribute=request
 
 #----------单点登录服务----------#
 #单点登录服务端地址
-sso.server.url=http://server.smart-sso.com:8080
+sso.server.url=http://server.smart-sso.com:8080/server
 #客户端应用密钥信息
 sso.app.id=demo2
 sso.app.secret=123456
