--- a/smart-sso-demo/src/main/resources/application.properties
+++ b/smart-sso-demo/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.context-path=/demo
 
 logging.level.root=debug
 
@@ -10,7 +11,7 @@ spring.freemarker.request-context-attribute=request
 
 #----------单点登录服务----------#
 #单点登录服务端地址
-sso.server.url=http://server.smart-sso.com:8080
+sso.server.url=http://server.smart-sso.com:8080/server
 #客户端应用密钥信息
 sso.app.id=demo1
 sso.app.secret=123456
