--- a/smart-sso-server/src/main/resources/application.properties
+++ b/smart-sso-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.servlet.context-path=/server
 
 logging.level.root=debug
 
@@ -10,7 +11,7 @@ spring.freemarker.request-context-attribute=request
 
 #----------单点登录服务----------#
 #单点登录服务端地址
-sso.server.url=http://server.smart-sso.com:8080
+sso.server.url=http://server.smart-sso.com:8080/server
 #客户端应用密钥信息（服务端也可以登录，可以理解为是它自己的一个客户端）
 sso.app.id=server1
 sso.app.secret=123456
