--- a/smart-sso-demo/src/main/resources/application.properties
+++ b/smart-sso-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.servlet.context-path=/demo
+server.servlet.context-path=/client1
 
 logging.level.root=debug
 
@@ -11,11 +11,15 @@ spring.freemarker.request-context-attribute=request
 
 #----------单点登录服务----------#
 #单点登录服务端地址
-sso.server.url=http://server.smart-sso.com:8080/server
+sso.server.url=http://server.sso.com:8080/server
+# 将单点登录地址改为nginx地址，此时登录后跳转地址为http://localhost/client1/?code=code-02f8c8e781db4958b54e11889088c5dc，估计需要在Nginx进行相关配置才行
+#sso.server.url=http://portal.sso.com:9004/server
+
 #客户端应用密钥信息
 sso.app.id=demo1
 sso.app.secret=123456
 #----------单点登录服务----------#
+
 
 #spring.redis.host=127.0.0.1
 #spring.redis.port=6379
